# AgentOS

./: .gitignore  AGENTS.md
FIX_DECLARATIONS/: AGENTOS-V0.1-SELF-CONSISTENCY-FIXES-2026-03-11.md
docs/conformance/: conformance-test-suite-v0.1.md
docs/foundation/: agentos-foundation.md
docs/foundation/appendices/: appendix-a-irreducible-kernel-sentence.md  appendix-b-seed-vocabulary.md
docs/reference-runtime/: minimal-reference-runtime-v0.1.md
docs/specs/: field-alignment-v0.1.md
docs/specs/budget/: budget-context-spec-v0.1.md
docs/specs/capabilities/: capability-contract-spec-v0.1.md
docs/specs/events/: event-schema-spec-v0.1.md
docs/specs/kernel/: kernel-spec-v0.1.md
runtime/: README.md
runtime/mrr/: Cargo.toml
runtime/mrr/migrations/: 0001_initial.sql  0002_control_signals.sql  0003_capabilities.sql
runtime/mrr/src/: capability.rs  checkpoint_store.rs  clock.rs  control_signal.rs  db.rs  error.rs  event_log.rs  lib.rs  main.rs  principal.rs  state_store.rs  task.rs  task_manager.rs
runtime/mrr/tests/: capability_conformance.rs  runtime_conformance.rs
schemas/budgets/: budget-context.schema.json
