[package]
name = "agentos-mrr"
version = "0.1.0"
edition = "2021"

[lib]
name = "agentos_mrr"
path = "src/lib.rs"

[[bin]]
name = "inspector_cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "uuid", "time", "json", "migrate"] }
thiserror = "2.0"
time = { version = "0.3", features = ["formatting", "parsing", "serde", "macros"] }
tokio = { version = "1.44", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.12", features = ["serde", "v4"] }

[dev-dependencies]
tempfile = "3.15"
